# Conformal-Prediction

./: Introdução-Prática-Previsão-Conforme.ipynb  Previsão-Conforme-Classificação-Binária.ipynb  Previsão-Conforme-Classificação.ipynb  Previsão-Conforme-Regressão.ipynb  README.md
cp-101/: README.md  requirements.txt
cp-101/01-cp-for-multiclass/: 01-cp-for-multiclass.ipynb  pyproject.toml
cp-101/02-cp-for-regression/: 02-cp-for-regression.ipynb
cp-101/03-cp-for-binary-class/: 03-cp-for-binary-class-v2.ipynb
cp-101/03-cp-for-binary-class/Superstore-Marketing-Campaign/: superstore_data.csv
cp-101/03-cp-for-binary-class/VennABERS/: LICENSE  README.md  VennABERS.py
cp-101/03-cp-for-binary-class/VennABERS/test/: VennABERS_test.ipynb
