[tool.poetry]
name = "01-cp-for-multiclass"
version = "0.1.0"
description = ""
authors = ["Gustavo Bruschi <gusb13@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "1.24.1"
pandas = "1.5.2"
matplotlib = "3.6.2"
scikit-learn = "1.2.2"
tqdm = "4.64.1"
jupyter = "^1.0.0"
lightgbm = "^3.3.5"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"